# FileXplorer

./: .gitattributes  .gitignore  AddressELineEdit.cpp  AddressELineEdit.h  AdvanceSearchModel.cpp  AdvanceSearchModel.h  CMakeLists.txt  CRBnIw.json  ClickableAddressWidget.cpp  ClickableAddressWidget.h  ContentPane.cpp  ContentPane.h  ContentPanel.cpp  ContentPanel.h  ContentPanelImplementer.cpp  DragDropTableView.cpp  DragDropTableView.h  Experiment.py  FileExplorerEvent.cpp  FileExplorerEvent.h  FileExplorerReadOnly.cpp  FileExplorerReadOnly.h  FileExplorerReadOnly.pro  FileExplorerReadOnly.pro.user.187c1f8  FileExplorerReadOnly_zh_CN.qm  FileExplorerReadOnly_zh_CN.ts  FileExplorerTest.pro  FileExplorerTest.pro.user.187c1f8  FileLeafAction.cpp  FileLeafAction.h  FileXplorer.cpp  FileXplorer.h  FileXplorer.pro  FileXplorerTest.pro  FolderPreviewHTML.cpp  FolderPreviewHTML.h  FolderPreviewWidget.cpp  FolderPreviewWidget.h  InitCheck.cpp  InitCheck.h  (+38 more)
TestCase/: AIMediaDuplicateTest.cpp  ActionsRecorderTest.cpp  CMakeLists.txt  CastManagerTest.cpp  CatergorizerTest.cpp  ClickableTextBrowserTest.cpp  ConflictSolveModelTest.cpp  ConflictsItemHelperTest.cpp  ConvertBoldUnicodeCharsetToAsciiTest.cpp  ConvertUnicodeCharsetToAsciiTest.cpp  CreateFileFolderHelperTest.cpp  DbManagerTest.cpp  DisplayEnhancementTest.cpp  DuplicateImagesRemoverTest.cpp  ExtractPileItemsOutFolderTest.cpp  FileDescriptorTest.cpp  FileOperationTest.cpp  FileSystemItemFilterTest.cpp  FilesNameBatchStandardizerTest.cpp  FinderTest.cpp  FolderNxtAndLastIteratorTest.cpp  ImgThumbnailProcesserTest.cpp  ItemsClassifierTest.cpp  JsonEditorToolTest.cpp  JsonFileHelperTest.cpp  JsonRenameRegexTest.cpp  JsonToolTest.cpp  LogHandlerTest.cpp  LoggerTest.cpp  LongPathFinderTest.cpp  LowResImgsRemoverTest.cpp  MD5CalculatorTest.cpp  MovieNameStandardizerTest.cpp  NameSectionArrangeTest.cpp  NameToolTest.cpp  OnScopeExitTest.cpp  PathRelatedTool.cpp  PathRelatedTool.h  PathToolTest.cpp  PerformersAkaManagerTest.cpp  (+31 more)
TestCase/ActionsTest/: ActionsRecorderTest.cpp  FileRenameRulerActionsTest.cpp  RateActionsTest.cpp
TestCase/ComponentTest/: AddressELineEditTest.cpp  AdvanceSearchModelTest.cpp  AdvanceSearchToolBarTest.cpp  ArchiverTest.cpp  ColumnVisibilityDialogTest.cpp  ConfigsTableTest.cpp  CustomStatusBarTest.cpp  DatabaseSearchToolBarTest.cpp  DraggableToolButtonTest.cpp  FileSystemModelTest.cpp  FileXplorerTest.cpp  HarTableViewTest.cpp  MD5WindowTest.cpp  MultiCursorEditorTest.cpp  NavigationAndAddressBarTest.cpp  NavigationExToolBarTest.cpp  NavigationToolBarTest.cpp  PathComboBoxTest.cpp  PreviewTypeToolBarTest.cpp  PropertiesWindowTest.cpp  QuickWhereClauseDialogTest.cpp  QuickWhereClauseTest.cpp  RecycleCfmDlgTest.cpp  RedundantImageFinderTest.cpp  ReorderableToolBarTest.cpp  ResourceMonitorPanelTest.cpp  RibbonMenuTest.cpp  ScenePageControlTest.cpp  SearchCaseMatterToolButtonTest.cpp  SearchModeToolButtonTest.cpp  SpacerWidgetTest.cpp  StackedAddressAndSearchToolBarTest.cpp  StateLabelTest.cpp  ThumbnailImageViewerTest.cpp  ToolBarWidgetTest.cpp  TypeFilterButtonTest.cpp  ViewSwitchToolBarTest.cpp  ViewsStackedWidgetTest.cpp
TestCase/DbManager/: BasicSqliteTest.cpp  DbManagerTest.cpp  DeviceAndDriver.db  DevicesAndDriverDbTest.cpp  FdBasedDbTest.cpp  FileDescriptorTest.cpp  MountHelperTest.cpp  MovieBaseDbTest.cpp  PerfBaseDbTest.cpp
TestCase/DbManagerTest/: BasicSqliteTest.cpp  CastBaseDbTest.cpp  DbManagerTest.cpp  DevicesAndDriverDbTest.cpp  DupVidsManagerTest.cpp  FdBasedDbTest.cpp  FileDescriptorTest.cpp  MountHelperTest.cpp  PerfBaseDbTest.cpp
TestCase/FileOperation/: ComplexOperationTest.cpp  ExtractPileItemsOutFolderTest.cpp  FileOperationExTest.cpp  FileOperationTest.cpp  FilesNameBatchStandardizerTest.cpp  ItemsClassifierTest.cpp  ScenesMixedTest.cpp  SyncModifiyFileSystemTest.cpp  UndoRedoTest.cpp
TestCase/FileOperationTest/: ComplexOperationTest.cpp  ExtractPileItemsOutFolderTest.cpp  FileOperationTest.cpp  FilesNameBatchStandardizerTest.cpp  ItemsClassifierTest.cpp  ItemsPackerTest.cpp  ScenesMixedTest.cpp  SyncModifiyFileSystemTest.cpp  TSFilesMergerTest.cpp  UndoRedoTest.cpp
TestCase/Json/: DataFormatterTest.cpp  JsonFileHelperTest.cpp  JsonPrTest.cpp  JsonRenameRegexTest.cpp  MarcoExpandTest.cpp  SortedUniqStrLstTest.cpp
TestCase/JsonTest/: DataFormatterTest.cpp  JsonFileHelperTest.cpp  JsonHelperTest.cpp  JsonPrTest.cpp  JsonRenameRegexTest.cpp  MarcoExpandTest.cpp  RateHelperTest.cpp  SortedUniqStrLstTest.cpp
TestCase/MockTool/: AdvanceRenamerTestTool.cpp  AdvanceRenamerTestTool.h  FileDescriptorMock.cpp  FileDescriptorMock.h  FileToolMock.cpp  FileToolMock.h  MountPathTableNameMapperMock.cpp  UserInteractiveMock.cpp  UserInteractiveMock.h  VideoDurationGetterMock.cpp  VideoDurationGetterMock.h
TestCase/ModelTest/: ArchiverModelTest.cpp  CastDbModelTest.cpp  ConfigsModelTest.cpp  DevicesDriveModelTest.cpp  FdBasedDbModelTest.cpp  FloatingModelsTest.cpp  HarModelTest.cpp  JsonTableModelTest.cpp  MultiLineEditDelegateTest.cpp  PwdTableModelTest.cpp  QAbstractListModelPubTest.cpp  QAbstractTableModelPubTest.cpp  QAbstractTreeModelPubTest.cpp  RedundantImageModelTest.cpp  SceneStyleDelegateTest.cpp  ScenesListModelTest.cpp  SqlTableModelPubTest.cpp  TorrentsManagerWidgetTest.cpp
TestCase/RenameTest/: AdvanceRenamerTest.cpp  CommandsPreviewTest.cpp  LongPathFinderTest.cpp  NameSectionArrangeTest.cpp  NameToolTest.cpp  RenameHelperTest.cpp  RenameUnqiueCheckTest.cpp
TestCase/ToolsTest/: ArchiveFilesTest.cpp  CastAkasManagerTest.cpp  CastBrowserHelperTest.cpp  CastManagerTest.cpp  CopyStringListToClipboardTest.cpp  CreateFileFolderHelperTest.cpp  CredentialUtilTest.cpp  FileDescriptorTest.cpp  FileSystemItemFilterTest.cpp  FolderNxtAndLastIteratorTest.cpp  FolderPreviewSwitcherTest.cpp  HarFilesTest.cpp  LowResImgsRemoverTest.cpp  MD5CalculatorTest.cpp  NameStandardizerTest.cpp  PaginatedListTest.cpp  PlayVideoTest.cpp  QuickWhereClauseHelperTest.cpp  RatingStateMachineTest.cpp  RedundantItemsRemoverTest.cpp  ResourceMonitorTest.cpp  SceneInfoManagerTest.cpp  SceneInfoTest.cpp  (+10 more)
(+1304 files in other folders)
